# 336v2

./: .env  .env.example  .gitignore  .replit  DEPLOYMENT.md  README.md  cleanup_unused.py  config.py  database.py  database_improvements.sql  handlers.py  keyboards.py  main.py  military_records_20250717_003220.xlsx  military_records_20250717_003829.xlsx  military_records_20250717_004019.xlsx  military_records_20250717_021825.xlsx  military_records_20250717_085536.xlsx  military_records_20250717_090045.xlsx  military_records_20250717_092348.xlsx  military_records_20250717_092528.xlsx  military_records_20250717_093618.xlsx  military_records_20250717_093939.xlsx  military_records_20250717_094023.xlsx  military_records_20250717_094138.xlsx  military_records_20250717_095420.xlsx  military_records_20250717_100352.xlsx  military_records_20250717_170205.csv  military_records_вчера_20250717_173203.xlsx  military_records_вчера_20250717_173425.xlsx  military_records_последние_30_дней_20250717_104734.xlsx  military_records_сегодня_20250717_173152.xlsx  military_records_сегодня_20250717_173316.xlsx  military_records_сегодня_20250717_173419.xlsx  military_tracker.db  monitoring.py  notifications.json  pyproject.toml  random_phrases.py  replit.nix  (+3 more)
attached_assets/: Pasted---1752715787403_1752715787407.txt  Pasted--17-07-2025-00-59-50--1752714042888_1752714042889.txt  Pasted--Claude-4-Telegram-Replit--1752800209160_1752800209161.txt  Pasted--Claude-4-Telegram-Replit--1752800354583_1752800354584.txt  Pasted--start--1752707589885_1752707589887.txt  (+3 more)
handlers/: __init__.py  admin.py  (+4 more)
(+6 files in other folders)
